--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-title: writings by stuart popejoy
+title: tatterdemalion: writings by stuart popejoy
 ---
+
 
 $partial("templates/post-list.html")$
